[tool.poetry]
name = "projeto-semana-voo"
version = "0.1.0"
description = ""
authors = ["Fabio Cantarim <fabio.cantarim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
redis = "^5.0.6"
pandas = "^2.2.2"
pymongo = "^4.7.3"
selenium = "^4.22.0"
bs4 = "^0.0.2"
lxml = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
